force-app/main/default/objects/Component__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>