force-app/main/default/objects/Component__c/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <label>Commit</label>
    <type>Lookup</type>
    <referenceTo>Commit__c</referenceTo>
    <relationshipName>Components</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>