force-app/main/default/objects/Component__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <type>Text</type>
    <length>64</length>
</CustomField>