force-app/main/default/objects/Component__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <label>Is Deleted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>