force-app/main/default/objects/Component__c/fields/Last_Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_User__c</fullName>
    <label>Last Modified By User</label>
    <type>Text</type>
    <length>255</length>
</CustomField>