force-app/main/default/objects/Component__c/fields/Last_Modified_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Value__c</fullName>
    <label>Last Modified Date Value</label>
    <type>DateTime</type>
</CustomField>