force-app/main/default/objects/Component__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>