force-app/main/default/objects/Component__c/fields/XML_Content__c.field-meta.xml
<CustomField>
    <fullName>XML_Content__c</fullName>
    <label>XML Content</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>